Fixed the styling and position of Sidebar Collapse buttons in all Window Frame Styles on macOS #104

--- a/src/scss/User Interface/Sidebar/tabHeader.scss
+++ b/src/scss/User Interface/Sidebar/tabHeader.scss
@@ -26,11 +26,6 @@
 	}
 }
 
-.mod-left-split .workspace-tabs .workspace-tab-header-spacer,
-.mod-right-split .workspace-tabs .workspace-tab-header-spacer {
-	display: none;
-}
-
 .pt-fade-inactive-tabs :not(.mod-active) .workspace-tab-header.is-active:not(.mod-active) {
 	opacity: 0.55;
 }
